Fix images on mobile

--- a/Resources/static/styles/styles.css
+++ b/Resources/static/styles/styles.css
@@ -323,4 +323,5 @@ img {
     margin-left: auto;
     margin-right: auto;
     padding: 1em;
+    max-width: 95%;
 }
